k8s/auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-microservice
  namespace: cominow
  labels:
    app: auth-microservice
  annotations:
    argocd-image-updater.argoproj.io/image-list: auth=515966498907.dkr.ecr.us-east-2.amazonaws.com/cominow/auth-microservice
    argocd-image-updater.argoproj.io/auth.update-strategy: latest
    argocd-image-updater.argoproj.io/auth.pull-secret: pullsecret:argocd/ecr-credentials
spec:
  replicas: 2
  selector:
    matchLabels:
      app: auth-microservice
  template:
    metadata:
      labels:
        app: auth-microservice
    spec:
      containers:
        - name: auth-microservice
          image: 515966498907.dkr.ecr.us-east-2.amazonaws.com/cominow/auth-microservice:f09ffbc5f58398cb49bd9dd98392ce9ef9137d04
          ports:
            - containerPort: 3001
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: auth-microservice
  namespace: cominow
  labels:
    app: auth-microservice
spec:
  type: ClusterIP
  ports:
    - port: 3001
      targetPort: 3001
      protocol: TCP
  selector:
    app: auth-microservice
