k8s/customization-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customization-microservice
  namespace: cominow
  labels:
    app: customization-microservice
  annotations:
    argocd-image-updater.argoproj.io/image-list: customization=515966498907.dkr.ecr.us-east-2.amazonaws.com/cominow/customization-microservice
    argocd-image-updater.argoproj.io/customization.update-strategy: latest
    argocd-image-updater.argoproj.io/customization.pull-secret: pullsecret:argocd/ecr-credentials
spec:
  replicas: 2
  selector:
    matchLabels:
      app: customization-microservice
  template:
    metadata:
      labels:
        app: customization-microservice
    spec:
      containers:
        - name: customization-microservice
          image: 515966498907.dkr.ecr.us-east-2.amazonaws.com/cominow/customization-microservice:latest
          ports:
            - containerPort: 3005
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: customization-microservice
  namespace: cominow
  labels:
    app: customization-microservice
spec:
  type: ClusterIP
  ports:
    - port: 3005
      targetPort: 3005
      protocol: TCP
  selector:
    app: customization-microservice
