k8s/order-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-microservice
  namespace: cominow
  labels:
    app: order-microservice
  annotations:
    argocd-image-updater.argoproj.io/image-list: order=515966498907.dkr.ecr.us-east-2.amazonaws.com/cominow/order-microservice
    argocd-image-updater.argoproj.io/order.update-strategy: latest
    argocd-image-updater.argoproj.io/order.pull-secret: pullsecret:argocd/ecr-credentials
spec:
  replicas: 2
  selector:
    matchLabels:
      app: order-microservice
  template:
    metadata:
      labels:
        app: order-microservice
    spec:
      containers:
        - name: order-microservice
          image: 515966498907.dkr.ecr.us-east-2.amazonaws.com/cominow/order-microservice:61c878dcbdacd80807254819bce545b080c223d8
          ports:
            - containerPort: 3003
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: order-microservice
  namespace: cominow
  labels:
    app: order-microservice
spec:
  type: ClusterIP
  ports:
    - port: 3003
      targetPort: 3003
      protocol: TCP
  selector:
    app: order-microservice
