k8s/payment-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-microservice
  namespace: cominow
  labels:
    app: payment-microservice
  annotations:
    argocd-image-updater.argoproj.io/image-list: payment=515966498907.dkr.ecr.us-east-2.amazonaws.com/cominow/payment-microservice
    argocd-image-updater.argoproj.io/payment.update-strategy: latest
    argocd-image-updater.argoproj.io/payment.pull-secret: pullsecret:argocd/ecr-credentials
spec:
  replicas: 2
  selector:
    matchLabels:
      app: payment-microservice
  template:
    metadata:
      labels:
        app: payment-microservice
    spec:
      containers:
        - name: payment-microservice
          image: 515966498907.dkr.ecr.us-east-2.amazonaws.com/cominow/payment-microservice:de52b4171a28727368d4815398d53031185b41fb
          ports:
            - containerPort: 3004
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: payment-microservice
  namespace: cominow
  labels:
    app: payment-microservice
spec:
  type: ClusterIP
  ports:
    - port: 3004
      targetPort: 3004
      protocol: TCP
  selector:
    app: payment-microservice
