k8s/product-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-microservice
  namespace: cominow
  labels:
    app: product-microservice
  annotations:
    argocd-image-updater.argoproj.io/image-list: product=515966498907.dkr.ecr.us-east-2.amazonaws.com/cominow/product-microservice
    argocd-image-updater.argoproj.io/product.update-strategy: latest
    argocd-image-updater.argoproj.io/product.pull-secret: pullsecret:argocd/ecr-credentials
spec:
  replicas: 2
  selector:
    matchLabels:
      app: product-microservice
  template:
    metadata:
      labels:
        app: product-microservice
    spec:
      containers:
        - name: product-microservice
          image: 515966498907.dkr.ecr.us-east-2.amazonaws.com/cominow/product-microservice:301780974d778b255ed5f7517a0ffc17e5cd295d
          ports:
            - containerPort: 3002
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: product-microservice
  namespace: cominow
  labels:
    app: product-microservice
spec:
  type: ClusterIP
  ports:
    - port: 3002
      targetPort: 3002
      protocol: TCP
  selector:
    app: product-microservice
