k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cominow-ingress
  namespace: cominow
  annotations:
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/scheme: "internet-facing"
    alb.ingress.kubernetes.io/target-type: "ip"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:us-east-2:515966498907:certificate/YOUR-CERT-ARN"
    alb.ingress.kubernetes.io/ssl-redirect: "443"
spec:
  rules:
    - host: api.cominow.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-gateway
                port:
                  number: 3000
